--- a/index.html
+++ b/index.html
@@ -595,7 +595,7 @@
         <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
             <div class="grid md:grid-cols-4 gap-8">
                 <div>
-                    <div class="text-2xl font-bold mb-4">🏍️ HelmetPro</div>
+                    <div class="text-2xl font-bold mb-4">🏍️ GuardianHelmet</div>
                     <p class="text-gray-400 mb-4">
                         Toko helm terpercaya dengan kualitas terbaik untuk keselamatan berkendara Anda.
                     </p>
@@ -632,16 +632,16 @@
                 <div>
                     <h3 class="text-lg font-semibold mb-4">Kontak</h3>
                     <div class="space-y-2 text-gray-400">
-                        <p>📍 Jl. Sudirman No. 123, Jakarta</p>
-                        <p>📞 +62 21 1234 5678</p>
-                        <p>📱 +62 812 3456 7890</p>
-                        <p>✉️ info@helmetpro.com</p>
+                        <p>📍 Jl. Muh.Jufri No. 9, Sulawesi Selatan</p>
+                        <p>📞 +62 812 4275 9271</p>
+                        <p>📱 +62 812 4275 9271</p>
+                        <p>✉️ Sann@GuardianHelmet.com</p>
                     </div>
                 </div>
             </div>
             
             <div class="border-t border-gray-800 mt-8 pt-8 text-center text-gray-400">
-                <p>&copy; 2024 HelmetPro. Semua hak dilindungi. Dibuat dengan ❤️ untuk keselamatan berkendara.</p>
+                <p>&copy; 2025 GuardianHelmet. Semua hak dilindungi. Dibuat dengan ❤️ untuk keselamatan berkendara.</p>
             </div>
         </div>
     </footer>
